--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -21,3 +21,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
+.tabheader {
+	font-size: 20px;
+	margin-top: 20px;
+}
