--- a/www/templates/players.html
+++ b/www/templates/players.html
@@ -1,4 +1,4 @@
-<ion-view title="Players">
+<ion-view title="Logout">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
         <form class="list">
             <label class="item item-select">
