page naming fixes

--- a/www/templates/newMatch.html
+++ b/www/templates/newMatch.html
@@ -1,4 +1,4 @@
-<ion-view title="Players">
+<ion-view title="Search">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
 
     	<div id="msg"></div>
