--- a/www/templates/badSquash.html
+++ b/www/templates/badSquash.html
@@ -23,7 +23,7 @@
                 <ion-item ui-sref="badSquash.teams" menu-close="">Leagues</ion-item>
                 <ion-item ui-sref="badSquash.players" menu-close="">Logout</ion-item>
                 <ion-item ui-sref="badSquash.pastMatches" menu-close="">Fixtures</ion-item>
-                <ion-item ui-sref="badSquash.newMatch" menu-close="">Players</ion-item>
+                <ion-item ui-sref="badSquash.newMatch" menu-close="">Search</ion-item>
                 <ion-item ui-sref="badSquash.settings" menu-close="">Settings</ion-item>
             </ion-list>
         </ion-content>
