Commit: charts added

--- a/www/templates/newMatch.html
+++ b/www/templates/newMatch.html
@@ -30,6 +30,9 @@
 				        <div id="gamesbar"></div>
 				        <p id="p_points"></p>
 				        <div id="pointsbar"></div>
+				       	<p id="level_hist">
+        					<div id="line_chart" style="width: 500px; height: 200px"></div>
+        				</p>
 				    </div>
 	    
 	    		<h2 class="title tabheader"> Matches </h2>
