player page - not working yet

--- a/www/templates/players.html
+++ b/www/templates/players.html
@@ -1,4 +1,4 @@
-<ion-view title="Logout">
+<ion-view title="Players">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
         <form class="list">
             <label class="item item-select">
@@ -12,5 +12,23 @@
                 </select>
             </label>
         </form>
+        <ion-list id="players"></ion-list>
+        <ion-list id="poo">
+  <ion-item>Hello!</ion-item>
+  <ion-item href="#/detail">
+    Link to detail page
+  </ion-item>
+  <ion-item>Hello!</ion-item>
+  <ion-item href="#/detail">
+    Link to detail page
+  </ion-item>
+  <ion-item>Hello!</ion-item>
+  <ion-item href="#/detail">
+    Link to detail page
+  </ion-item>
+</ion-list>
+
+        
+        <div id="levels"></div>
     </ion-content>
 </ion-view>
