--- a/www/templates/teams.html
+++ b/www/templates/teams.html
@@ -3,9 +3,64 @@
         <form class="list">
             <label class="item item-select">
                 <span class="input-label">Filters</span>
-                <select>
-                    <option>Blah</option>
-                    <option>Blah</option>
+                <select>     
+                <html>
+                    <head>
+                        <meta charset="utf-8" />
+                        <meta name="format-detection" content="telephone=no" />
+                        <meta name="msapplication-tap-highlight" content="no" />
+                        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
+                        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+                        <!-- <link rel="stylesheet" type="text/css" href="css/index.css" /> -->
+                        
+
+                        <link rel="stylesheet" type="text/css" href="demo.css" />
+
+
+                        <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.11.4/themes/humanity/jquery-ui.css" />
+                        <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.js"></script>
+                        <script type="text/javascript" src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
+                        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.10/css/jquery.dataTables.min.css" />
+                        
+                        <script type="text/javascript" src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
+                        <script type="text/javascript" src="./demo.js"></script>
+                        
+                    
+                         
+                        
+
+                        <title>smd Hello World</title>
+                    </head>
+                    <body>
+                        <div id="msg"></div>
+
+                    <div id="form">
+
+                        <p> 
+                            Team ID (try ):
+                            <input id= "teamid" />
+                            <button id= "loadteambutton">Load</button>
+                        </p>
+                    </div>
+
+                        <div id ="team">
+                            <p> 
+                            <p id ="team_name"></P>
+                            <table id="dteamtable" class="display" width="100%"></table>
+                            
+                            </p>
+                        </div>
+
+                        
+                            <script type="text/javascript" src="cordova.js"></script>
+                            <script type="text/javascript" src="js/index.js"></script>
+                            <script type="text/javascript">
+                                app.initialize();
+                            </script>
+                        </body>
+                    </html>
+
                 </select>
             </label>
         </form>
