--- a/www/templates/players.html
+++ b/www/templates/players.html
@@ -18,7 +18,7 @@
         </ion-item>
        </ion-list>
 
-       <button on-tap="onTap()" class="button button-assertive" id="loadbutton">More</button>
+       <!-- <button on-tap="onTap()" class="button button-assertive" id="loadbutton">More</button> -->
 
         
         <div id="levels"></div>
