--- a/www/lib/ionic/css/custom.css
+++ b/www/lib/ionic/css/custom.css
@@ -9,8 +9,33 @@
 	float: left;
 	margin-right: 5px;
 }
- .smallbutt {
- 	width: 20%;
- 	padding: 5px;
- 	line-height: 36px;
- }
+.smallbutt {
+	width: 20%;
+	padding: 5px;
+	line-height: 36px;
+}
+
+#ranklist {
+	border-top: solid #777 1px;
+	margin-left: -10px;
+	margin-right: -10px;
+}
+#ranklist > li {
+	font-family: 'Helvetica Neue';
+	font-size: 16px;
+	height: 60px;
+	line-height: 60px;
+	padding: 0px 25px 0px 20px;
+	border-bottom: solid #777 1px;
+	color: #444;
+}
+#ranklist > li > p {
+	float: right;
+	margin-bottom: 0px;
+}
+
+.list .item {
+/* Styles go here */
+
+  -webkit-transform: translate3d(0,0,0);
+}
