players chart fix, other minor bug fixes

--- a/www/templates/pastMatches.html
+++ b/www/templates/pastMatches.html
@@ -1529,7 +1529,7 @@
 
 
 	    <div id="tabs">
-			<h2 class="title tabheader"> Ranking </h2>
+			<h2 class="title tabheader"> Rank </h2>
 	    			<div id="tab-ranking">
 	    				<div id="table_div" style="width: 500px; height: 200px"></div>
 	    			</div>
