--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -13,7 +13,7 @@
             </ion-list>
             <div class="spacer" style="height: 40px;"></div>
             <button class="button button-stable button-block ">Log in</button>
-            <a ui-sref="signup" class="button button-positive button-clear button-block ">Or create an account</a>
+            <a ui-sref="" class="button button-positive button-clear button-block ">Or create an account</a>
         </form>
     </ion-content>
 </ion-view>
