--- a/www/templates/pastMatches.html
+++ b/www/templates/pastMatches.html
@@ -1,4 +1,4 @@
-<ion-view title="Fixtures">
+<ion-view title="Squash Levels">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
 
 
