--- a/www/templates/players.html
+++ b/www/templates/players.html
@@ -1,6 +1,6 @@
-<ion-view title="Rankings">
+<ion-view title="Custom Match">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
-        <form class="list">
+        <!-- <form class="list">
             <label class="item item-select">
                 <span class="input-label">Filters</span>
                 <select>
@@ -11,14 +11,14 @@
                     <option>Level</option>
                 </select>
             </label>
-        </form><!-- 
+        </form> --><!-- 
         <ul id="ranklist">
         </ul> -->
-        <ion-list>
+        <!-- <ion-list>
           <ion-item ng-repeat="item in items">
             {{item}}
           </ion-item>
-        </ion-list>
+        </ion-list> -->
 
        <!-- <button on-tap="onTap()" class="button button-assertive" id="loadbutton">More</button> -->
 
