--- a/www/templates/newMatch.html
+++ b/www/templates/newMatch.html
@@ -18,7 +18,7 @@
 
 	    <div id="playerlist">
 		    <ion-list>
-	          <ion-item ng-repeat="item in items">
+	          <ion-item ng-repeat="item in items" ng-click="search(item)">
 	            {{item}}
 	          </ion-item>
 	        </ion-list>
