--- a/www/templates/pastMatches.html
+++ b/www/templates/pastMatches.html
@@ -1526,15 +1526,19 @@
 	        <div id="result"></div>    
 	    </div>
 
-
+	    <div id="msg"></div>
 
 	    <div id="tabs">
 			<h2 class="title tabheader"> Rank </h2>
-	    			<div id="tab-ranking">
+	    			<!-- <div id="tab-ranking">
 	    				<div id="table_div" style="width: 500px; height: 200px"></div>
-	    			</div>
+	    			</div> -->
 
-	 	</div>
+	 	
+
+	 	
+		    <ul id="ranklist"></ul>
+	    </div>
 
 	</ion-content>
 </ion-view>
