added expanding squashlevels entrys

--- a/www/lib/ionic/css/custom.css
+++ b/www/lib/ionic/css/custom.css
@@ -16,7 +16,7 @@
 	font-size: 15px;
 }
 
-#ranklist {
+/*#ranklist {
 	border-top: solid #777 1px;
 	margin-left: -10px;
 	margin-right: -10px;
@@ -41,7 +41,7 @@
 
 #ranklist > li.full {
 	line-height: 35px;
-}
+}*/
 
 .list .item {
 /* Styles go here */
@@ -51,4 +51,18 @@
 
 .barmargin {
 	margin-right: 5px!important;
+}
+
+.list .item.item-accordion {
+  line-height: 38px;
+  padding-top: 0;
+  padding-bottom: 0;
+  transition: 0.09s all linear;
+}
+.list .item.item-accordion.ng-hide {
+  line-height: 0px;
+}
+.list .item.item-accordion.ng-hide-add,
+.list .item.item-accordion.ng-hide-remove {
+  display: block !important;
 }
