--- a/www/templates/pastMatches.html
+++ b/www/templates/pastMatches.html
@@ -1,11 +1,16 @@
 <ion-view title="Squash Levels">
+<ion-nav-buttons side="right">
+  <button ui-sref="badSquash.filters" class="button" ng-click="doSomething()">
+    Filters
+  </button>
+</ion-nav-buttons>
     <ion-content overflow-scroll="true" padding="true" class="has-header">
 
 
     <div id="tab-rankingCounty">
 	        <form method="post">
 
-	            <button on-tap="onTap()" class="button button-stable" id="loadbutton">Search</button>
+	            
 	            
 <!--         	Not working yet
 				<input type="checkbox" name="check0" id="check0">First checkbox</input>
@@ -1521,6 +1526,8 @@
 						<option value="2">Female</option>
 				</select>
 
+				<button on-tap="onTap()" class="button button-stable" id="loadbutton">Search</button>
+
 	        <input type="hidden" name="hiddenInput" id="hiddenInput" value="" />
 	        </form>
 	        <div id="result"></div>    
@@ -1536,7 +1543,22 @@
 
 	 	
 
-	 	
+	 		<ion-list>
+			    <div ng-repeat="group in groups">
+			      <ion-item class="item-stable"
+			                ng-click="toggleGroup(group)"
+			                ng-class="{active: isGroupShown(group)}">
+			          <i class="icon" ng-class="isGroupShown(group) ? 'ion-minus' : 'ion-plus'"></i>
+			        &nbsp;
+			        {{group.name}}
+			      </ion-item>
+			      <ion-item class="item-accordion"
+			                ng-repeat="item in group.items"
+			                ng-show="isGroupShown(group)">
+			        {{item}}
+			      </ion-item>
+			    </div>
+	      	</ion-list>
 		    <ul id="ranklist"></ul>
 	    </div>
 
