--- a/www/lib/ionic/css/custom.css
+++ b/www/lib/ionic/css/custom.css
@@ -14,7 +14,14 @@
 	padding: 5px;
 	line-height: 36px;
 	font-size: 15px;
+	margin: 0px;
 }
+
+.searchbutton {
+	margin: 15px 10px;
+}
+
+
 
 /*#ranklist {
 	border-top: solid #777 1px;
