--- a/www/templates/pastMatches.html
+++ b/www/templates/pastMatches.html
@@ -1584,6 +1584,9 @@
 
 	    <div id="msg"></div>
 
+	    	    <div id="loader" style="text-align:center; margin-top: 20px"><img src="../img/ajax-loader.gif"></img></div>
+
+
 	    
 
 	    <div id="tabs">
