--- a/www/templates/squashLevels.html
+++ b/www/templates/squashLevels.html
@@ -1584,7 +1584,7 @@
 
 	    <div id="msg"></div>
 
-	    	    <div id="loader" style="text-align:center; margin-top: 20px"><img src="../img/ajax-loader.gif"></img></div>
+	    	    <div id="loader" style="text-align:center; margin-top: 20px"><img src="../www/img/ajax-loader.gif"></img></div>
 
 
 	    
