--- a/www/templates/squashLevels.html
+++ b/www/templates/squashLevels.html
@@ -1541,7 +1541,7 @@
 	    </div>
 
 	    <div id="msg"></div>
-	   	<div id="loader" style="text-align:center; margin-top: 20px"><!-- <img src="../img/ajax-loader.gif"></img> --></div>
+	   	<div id="loading" style="text-align:center; margin-top: 20px"><img src="../img/ajax-loader.gif"></img></div>
 
 	    <div id="tabs">
 			<h2 class="title tabheader"> Rank </h2>
