--- a/www/templates/squashLevels.html
+++ b/www/templates/squashLevels.html
@@ -4,7 +4,7 @@
 </ion-nav-buttons>
     <ion-content overflow-scroll="true" padding="true" class="has-header">
     <div id="tab-rankingCounty">
-    	<div class="list" id="filters" style="oveflow: hidden">
+    	<div class="list" id="filters">
 		  	<label class="item item-input item-select">
 			    <div class="input-label">Club</div>
 			    <select id="clubs" name="clubs">
