--- a/www/lib/ionic/css/custom.css
+++ b/www/lib/ionic/css/custom.css
@@ -82,6 +82,7 @@ table.roundScores > tbody > tr > td > input {
 	width: 100%;
 	height: 50px;
 	border: solid #888 1px;
+	border-radius: 2px;
 	line-height: 21px;
 	padding-left: 13px;
 }
