--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -4,15 +4,15 @@
             <ion-list>
                 <label class="item item-input">
                     <span class="input-label">Username</span>
-                    <input type="text" placeholder="">
+                    <input type="text" id="emailId" placeholder="">
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Password</span>
-                    <input type="password" placeholder="">
+                    <input type="password" id="passId" placeholder="">
                 </label>
             </ion-list>
             <div class="spacer" style="height: 40px;"></div>
-            <button class="button button-stable button-block ">Log in</button>
+            <button on-tap="loginTap()" class="button button-stable button-block ">Log in</button>
             <a ui-sref="" class="button button-positive button-clear button-block ">Or create an account</a>
         </form>
     </ion-content>
