--- a/www/templates/myProfile.html
+++ b/www/templates/myProfile.html
@@ -6,7 +6,10 @@
         </div>
         <form class="list">
             <label class="item item-input">
-                <span class="input-label">Club Name</span><textarea placeholder=""> </textarea>
+                <span class="input-label">Name</span><textarea id="playerName"placeholder=""></textarea>
+            </label>
+            <label class="item item-input">
+                <span class="input-label">Email</span><textarea id="playerEmail"placeholder=""></textarea>
             </label>
             <label class="item item-select">
                 <span class="input-label">Past</span>
