my profile more data, added player page info

--- a/www/lib/ionic/css/custom.css
+++ b/www/lib/ionic/css/custom.css
@@ -87,6 +87,10 @@ table.roundScores > tbody > tr > td > input {
 	padding-left: 13px;
 }
 
+.profileItem {
+	height: 20px;
+}
+
 input#dateInput{
 	padding: 0px;
 }
