--- a/www/templates/myProfile.html
+++ b/www/templates/myProfile.html
@@ -6,10 +6,28 @@
         </div>
         <form class="list">
             <label class="item item-input">
-                <span class="input-label">Name</span><textarea id="playerName"placeholder=""></textarea>
+                <span class="input-label">Name</span><textarea readonly id="playerName" class="profileItem" placeholder=""></textarea>
             </label>
             <label class="item item-input">
-                <span class="input-label">Email</span><textarea id="playerEmail"placeholder=""></textarea>
+                <span class="input-label">Email</span><textarea readonly id="playerEmail" class="profileItem" placeholder=""></textarea>
+            </label>
+            <label class="item item-input">
+                <span class="input-label">Position</span><textarea readonly id="playerPosition" class="profileItem" placeholder=""></textarea>
+            </label>
+            <label class="item item-input">
+                <span class="input-label">Current Level</span><textarea readonly id="playerLevel" class="profileItem" placeholder=""></textarea>
+            </label>
+            <label class="item item-input">
+                <span class="input-label">Initial Level</span><textarea readonly id="playerInitial" class="profileItem" placeholder=""></textarea>
+            </label>
+            <label class="item item-input">
+                <span class="input-label">Average Level</span><textarea readonly id="playerAverage" class="profileItem" placeholder=""></textarea>
+            </label>
+            <label class="item item-input">
+                <span class="input-label">Lowest Level</span><textarea readonly id="playerLow" class="profileItem" placeholder=""></textarea>
+            </label>
+            <label class="item item-input">
+                <span class="input-label">High Level</span><textarea readonly id="playerHigh" class="profileItem" placeholder=""></textarea>
             </label>
             <label class="item item-select">
                 <span class="input-label">Past</span>
