--- a/www/templates/rankings.html
+++ b/www/templates/rankings.html
@@ -30,15 +30,25 @@
 				  	</div>
 				</div>
 
-    		<h2 class="title tabheader">Stats </h2>
+    		<h2 class="title tabheader">Rankings </h2>
     			<div class="card">
 			        <div class="item item-text-wrap">
-    					<div id="tab-stats">
+			        	<div id = "tab-ranking">
+ 				  			<p id="club_rank"></p>
+			           		
+			           		<p id="league_rank0"></p>
+			           		<p id="league_rank1"></p>
+			           		<p id="league_rank2"></p>
+
+
+
+			        	</div>
+<!--     					<div id="tab-stats">
 			        		<p id="p_matches"></p>
 					        <p id="p_games"></p>
 					        <p id="p_points"></p>
 					        <p id="level_hist"></p>
-			    		</div>
+			    		</div> -->
 			    	</div>
 				</div>
 			<div id="line_chart" style="width: 300px; height: 200px"></div>
