scrollable tables, not the best
check out css overflow-x

--- a/www/templates/rankings.html
+++ b/www/templates/rankings.html
@@ -34,13 +34,12 @@
     			<div class="card">
 			        <div class="item item-text-wrap">
 			        	<div id = "tab-ranking">
- 				  			<p id="club_rank"></p>
-			           		
+ 				  			<p id="club_rank"></p>	
 			           		<p id="league_rank0"></p>
 			           		<p id="league_rank1"></p>
 			           		<p id="league_rank2"></p>
 
-
+			
 
 			        	</div>
 <!--     					<div id="tab-stats">
@@ -55,8 +54,11 @@
     
        		<h2 class="title tabheader"> Matches </h2>
 			<div id="tab-matches">
+			<ion-scroll direction="xy" style="height: 500px">
     			<table id="dtable" class="display cell-border" width="100%"></table>
+			</ion-scroll>
 			</div>
+
 	    </div>
 
 	</ion-content>
