--- a/www/templates/rankings.html
+++ b/www/templates/rankings.html
@@ -27,6 +27,7 @@
     			<div class="card">
 					<div class="item item-text-wrap">
 					    <div id="tab-main"></div>
+					    <div id ="level"></div>
 				  	</div>
 				</div>
 
@@ -38,19 +39,22 @@
 			           		<p id="league_rank0"></p>
 			           		<p id="league_rank1"></p>
 			           		<p id="league_rank2"></p>
-
-			
-
 			        	</div>
-<!--     					<div id="tab-stats">
-			        		<p id="p_matches"></p>
-					        <p id="p_games"></p>
-					        <p id="p_points"></p>
-					        <p id="level_hist"></p>
-			    		</div> -->
 			    	</div>
 				</div>
-			<div id="line_chart" style="width: 300px; height: 200px"></div>
+			<h2 class="title tabheader">Statistics </h2>
+				<div class="card">
+					<div id="tab-stats">
+						<p id="team_name"></p>
+		        		<p id="p_matches"></p>
+				        <p id="p_games"></p>
+				        <p id="p_points"></p>
+				        <p id="level_hist"></p>
+		    		</div>
+		    	</div>
+		    	<div class="card">	
+					<div id="line_chart" style="width: 300px; height: 200px"></div>
+		    	</div>
     
        		<h2 class="title tabheader"> Matches </h2>
 			<div id="tab-matches">
